# ProductionPlanner

./: .gitignore  README.md  docker-compose.debug.yml  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  sqlx-data.json
backend/migrations/: 20230125194149_initial-tables.sql
backend/src/: app.rs  db.rs  main.rs
backend/src/handlers/: mod.rs  order_handlers.rs  order_template_handlers.rs  system_handlers.rs  task_handlers.rs  task_template_handlers.rs
backend/src/middlewares/: auth.rs
backend/src/model/: current_user.rs  mod.rs  order.rs  task.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  authService.ts  main.ts  routes.js
frontend/src/routes/: Home.svelte  Template.svelte
frontend/src/routes/order/: CreateOrder.svelte  Order.svelte  OrderDetails.svelte
