[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
axum = { version ="0.6.4", features = ["json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls","postgres","macros","migrate","offline","uuid" ] }
serde = {version="1.0.152",features = ["derive"]}
serde_json = "1.0.91"
jsonwebtoken = "8.2.0"
tower-http = {version="0.3.5", features=["cors"]}
reqwest = { version = "0.11.14",default-features = false, features = ["json","rustls-tls"] }